# pico-playing

./: README.md
from-scratch/: CMakeLists.txt  blink_steve.c  do_it_all.sh
upy/: LEARNINGS.org  do_it_all.sh
upy/blinkie/: main.py
